initial2: Added speakers and schedule to website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
       <h2>
         <a id="user-content-header-1" class="anchor" href="#header-1" aria-hidden="true">
             <span class="octicon octicon-link"></span></a><b>Workshop Aims</b></h2>
-
+          The CVPM workshop aims to unite the researchers working in this field, and those who can directly/indirectly benefit from and/or contribute to it (including CV and AI researchers, doctors/clinicians, medical experts and psychologists). Although targeted at computer vision audiences, and aimed at promoting advancements in methods, a unique aspect of this workshop is that it brings a rich set of compelling applications (e.g., from video health monitoring to affective computing to face anti-spoofing and biometric security) that attracts broader audiences from fields beyond computer science.
+    </p>
     <h2>
         <a id="user-content-header-1" class="anchor" href="#header-1" aria-hidden="true">
             <span class="octicon octicon-link"></span></a><b>Speakers</b></h2>
@@ -58,9 +59,79 @@
             <h4>MERL</h4>
             
         </div>
+        <div class="col">
+            <img src="cvpm_images/tmarks.jpg" alt="Tim Marks
+            Hein" style="width: 150px; height: 150px;">
+            <h4><a href="https://www.merl.com/people/tmarks">Tim Marks</a></h4>
+            <h4>MERL</h4>
+            
+        </div>
     </div>
 </section>
 
+<section class="main-content">
+    <h2>
+        <a id="user-content-header-schedule" class="anchor" href="#schedule" aria-hidden="true">
+            <span class="octicon octicon-link"></span></a><b>Workshop Schedule</b>
+    </h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Speaker</th>
+                <th>Time</th>
+                <th>Talk Title</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Tim Marks</td>
+                <td>8:15 AM - 8:45 AM</td>
+                <td>Academic Multimodal AI in the Age of Big Tech Giants</td>
+            </tr>
+            <tr>
+                <td>Tim Marks</td>
+                <td>8:45 AM - 9:15 AM</td>
+                <td>Accelerating biomedicine with AI physician-scientists</td>
+            </tr>
+            <tr>
+                <td>Tim Marks</td>
+                <td>9:15 AM - 9:45 AM</td>
+                <td>Vision-Language Models in Radiology</td>
+            </tr>
+            <tr>
+                <td>Tim Marks</td>
+                <td>9:45 AM - 10:15 AM</td>
+                <td>Multimodal Generative AI For Medical Image Interpretation</td>
+            </tr>
+            <tr>
+                <td><b>Break</b></td>
+                <td>10:15 AM - 10:30 AM</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Tim Marks</td>
+                <td>10:30 AM - 11:00 AM</td>
+                <td>Multi-modal AI and the Future of Radiology</td>
+            </tr>
+            <tr>
+                <td>Tim Marks</td>
+                <td>11:00 AM - 11:30 AM</td>
+                <td>Tool-augmented mulitmodal medical reasoning</td>
+            </tr>
+            <tr>
+                <td>Tim Marks</td>
+                <td>11:30 AM - 12:00 PM</td>
+                <td>3D Vision Language Models for Medical Imaging - A Clinical Perspective</td>
+            </tr>
+            <tr>
+                <td>Tim Marks</td>
+                <td>12:00 PM - 12:30 PM</td>
+                <td>Multisensory AI for Health and Wellbeing</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
+  
     <style>
         .row {
             display: flex;
@@ -103,7 +174,7 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
-
+      <h2> CVPM Organizers</h2>
       <div class="row">
         <div class="col">
             <img src="cvpm_images/mcduff.jpeg" alt="Daniel McDuff">
