initial2: Update on September 1st

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,31 +32,17 @@
 
     <div class="row speakers">
         <div class="col">
-            <img src="cvpm_images/tmarks.jpg" alt="Tim Marks
+            <img src="cvpm_images/jim_rehg.jpg" alt="Tim Marks
             Hein" style="width: 150px; height: 150px;">
-            <h4><a href="https://www.merl.com/people/tmarks">Tim Marks</a></h4>
-            <h4>MERL</h4>
+            <h4><a href="https://rehg.org/">Jim Rehg</a></h4>
+            <h4>UIUC</h4>
             
         </div>
         <div class="col">
             <img src="cvpm_images/tmarks.jpg" alt="Tim Marks
             Hein" style="width: 150px; height: 150px;">
-            <h4><a href="https://www.merl.com/people/tmarks">Tim Marks</a></h4>
-            <h4>MERL</h4>
-            
-        </div>
-        <div class="col">
-            <img src="cvpm_images/tmarks.jpg" alt="Tim Marks
-            Hein" style="width: 150px; height: 150px;">
-            <h4><a href="https://www.merl.com/people/tmarks">Tim Marks</a></h4>
-            <h4>MERL</h4>
-            
-        </div>
-        <div class="col">
-            <img src="cvpm_images/tmarks.jpg" alt="Tim Marks
-            Hein" style="width: 150px; height: 150px;">
-            <h4><a href="https://www.merl.com/people/tmarks">Tim Marks</a></h4>
-            <h4>MERL</h4>
+            <h4><a href="https://www.merl.com/people/tmarks">Mystery Speaker</a></h4>
+            <h4>Org</h4>
             
         </div>
         <div class="col">
@@ -77,56 +63,56 @@
     <table>
         <thead>
             <tr>
-                <th>Speaker</th>
                 <th>Time</th>
+                <th>Speaker</th>
                 <th>Talk Title</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Tim Marks</td>
-                <td>8:15 AM - 8:45 AM</td>
-                <td>Academic Multimodal AI in the Age of Big Tech Giants</td>
-            </tr>
-            <tr>
-                <td>Tim Marks</td>
-                <td>8:45 AM - 9:15 AM</td>
-                <td>Accelerating biomedicine with AI physician-scientists</td>
-            </tr>
-            <tr>
-                <td>Tim Marks</td>
-                <td>9:15 AM - 9:45 AM</td>
-                <td>Vision-Language Models in Radiology</td>
-            </tr>
-            <tr>
-                <td>Tim Marks</td>
-                <td>9:45 AM - 10:15 AM</td>
-                <td>Multimodal Generative AI For Medical Image Interpretation</td>
-            </tr>
-            <tr>
-                <td><b>Break</b></td>
-                <td>10:15 AM - 10:30 AM</td>
+                <td>8:30 AM - 8:45 AM</td>
                 <td></td>
+                <td>Welcome and Introductory Remarks</td>
             </tr>
             <tr>
-                <td>Tim Marks</td>
-                <td>10:30 AM - 11:00 AM</td>
-                <td>Multi-modal AI and the Future of Radiology</td>
+                <td>8:40 AM - 9:20 AM</td>
+                <td>Jim Rehg (UIUC)</td>
+                <td><b> Keynote 1: </b> Jim Rehg Keynote Talk  <i>(35 minute talk with 5 minutes Q&A)</i></td>
             </tr>
             <tr>
-                <td>Tim Marks</td>
-                <td>11:00 AM - 11:30 AM</td>
-                <td>Tool-augmented mulitmodal medical reasoning</td>
+                <td>9:20 AM - 9:40 AM</td>
+                <td> </td>
+                <td><i> Accepted Paper 1: </i> BeatFormer: Efficient motion-robust remote heart rate estimation through unsupervised spectral zoomed attention filters</td>
             </tr>
             <tr>
-                <td>Tim Marks</td>
-                <td>11:30 AM - 12:00 PM</td>
-                <td>3D Vision Language Models for Medical Imaging - A Clinical Perspective</td>
+                <td>9:40 AM - 10:00 AM</td>
+                <td> </td>
+                <td><i> Accepted Paper 2: </i> Remote Heart Rate Measurement Based on Near Infrared Prior Information</td>
             </tr>
             <tr>
-                <td>Tim Marks</td>
-                <td>12:00 PM - 12:30 PM</td>
-                <td>Multisensory AI for Health and Wellbeing</td>
+                <td>10:00 AM - 10:40 AM</td>
+                <td> Mystery Speaker </td>
+                <td><b> Keynote 2: </b> Mystery Speaker Keynote Talk  <i>(35 minute talk with 5 minutes Q&A)</i></td>
+            </tr>
+            <tr>
+                <td>10:40 AM - 11:00 AM</td>
+                <td> </td>
+                <td><i> Accepted Paper 3: </i> A High-Throughput Platform to Bench Test Smartphone-Based Heart RateMeasurements Derived From Video</td>
+            </tr>
+            <tr>
+                <td>11:00 AM - 11:20 AM</td>
+                <td> </td>
+                <td><i> Accepted Paper 4: </i> VitalVideos-Worldwide: A large and diverse rPPG dataset with rich ground truths</td>
+            </tr>
+            <tr>
+                <td>11:20 AM -12:00 PM</td>
+                <td>Tim Marks (MERL)</td>
+                <td><b> Keynote 3: </b> Tim Marks Keynote Talk <i>(35 minute talk with 5 minutes Q&A)</i></td>
+            </tr>
+            <tr>
+                <td>12:00 PM - 12:10 PM</td>
+                <td></td>
+                <td><b> Best Paper Award and Closing Remarks </b> </td>
             </tr>
         </tbody>
     </table>
