initial2: Chaning speaker photo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
             
         </div>
         <div class="col">
-            <img src="cvpm_images/tmarks.jpg" alt="Tim Marks
+            <img src="cvpm_images/installer_background.jpg" alt="Tim Marks
             Hein" style="width: 150px; height: 150px;">
-            <h4><a href="https://www.merl.com/people/tmarks">Mystery Speaker</a></h4>
+            <h4><a href="">Mystery Speaker</a></h4>
             <h4>Org</h4>
             
         </div>
